# deque-test

./: .gitmodules  CMakeLists.txt  README.md
std/containers/sequences/deque/: allocator_mismatch.verify.cpp  compare.pass.cpp  compare.three_way.pass.cpp  get_allocator.pass.cpp  iterator_concept_conformance.compile.pass.cpp  iterators.pass.cpp  range_concept_conformance.compile.pass.cpp  types.pass.cpp
std/containers/sequences/deque/deque.capacity/: access.pass.cpp  empty.pass.cpp  empty.verify.cpp  max_size.pass.cpp  resize_size.pass.cpp  resize_size_value.pass.cpp  shrink_to_fit.pass.cpp  size.pass.cpp
std/containers/sequences/deque/deque.cons/: alloc.pass.cpp  assign_initializer_list.pass.cpp  assign_iter_iter.pass.cpp  assign_size_value.pass.cpp  copy.pass.cpp  copy_alloc.pass.cpp  deduct.pass.cpp  deduct.verify.cpp  default.pass.cpp  default_noexcept.pass.cpp  dtor_noexcept.pass.cpp  from_range.pass.cpp  initializer_list.pass.cpp  initializer_list_alloc.pass.cpp  iter_iter.pass.cpp  iter_iter_alloc.pass.cpp  move.pass.cpp  move_alloc.pass.cpp  move_assign.addressof.compile.pass.cpp  move_assign.pass.cpp  move_assign_noexcept.compile.pass.cpp  move_noexcept.pass.cpp  op_equal.pass.cpp  op_equal_initializer_list.pass.cpp  size.pass.cpp  size_value.pass.cpp  size_value_alloc.pass.cpp
std/containers/sequences/deque/deque.erasure/: erase.pass.cpp  erase_if.pass.cpp
std/containers/sequences/deque/deque.modifiers/: append_range.pass.cpp  assign_range.pass.cpp  clear.pass.cpp  emplace.pass.cpp  emplace_back.pass.cpp  emplace_front.pass.cpp  erase_iter.invalidation.pass.cpp  erase_iter.pass.cpp  erase_iter_iter.invalidation.pass.cpp  erase_iter_iter.pass.cpp  insert_iter_initializer_list.pass.cpp  insert_iter_iter.pass.cpp  insert_range.pass.cpp  insert_rvalue.pass.cpp  insert_size_value.pass.cpp  insert_value.pass.cpp  pop_back.invalidation.pass.cpp  pop_back.pass.cpp  pop_front.invalidation.pass.cpp  pop_front.pass.cpp  prepend_range.pass.cpp  push_back.pass.cpp  push_back_exception_safety.pass.cpp  push_back_rvalue.pass.cpp  push_front.pass.cpp  push_front_exception_safety.pass.cpp  push_front_rvalue.pass.cpp
std/containers/sequences/deque/deque.special/: copy.pass.cpp  copy_backward.pass.cpp  move.pass.cpp  move_backward.pass.cpp  swap.pass.cpp  swap_noexcept.pass.cpp
support/: asan_testing.h  test_macros.h
